--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ h1, h2 {
     text-align: center;
     
     /* Reemplaza con una imagen de alta calidad */
-    background: url('img/sasha\ portada.png') no-repeat center center/cover;
+    background: url('../img/sasha\ portada.png') no-repeat center center/cover;
     position: relative;
     color: var(--color-text-light);
     
